--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <java.version>17</java.version>
         <jjwt.version>0.11.5</jjwt.version>
         <mybatis.version>3.0.1</mybatis.version>
+        <liquibase.version>4.19.0</liquibase.version>
+        <springdoc.version>2.0.2</springdoc.version>
     </properties>
     <dependencies>
         <dependency>
@@ -47,6 +49,11 @@
             <version>${mybatis.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -68,6 +75,11 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
+        </dependency>
 
 
         <dependency>
