--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,9 @@
 version: '3'
 
+volumes:
+  cache:
+    driver: local
+
 services:
   app:
     build:
@@ -23,3 +27,13 @@ services:
       - POSTGRES_DB=tasklist
     volumes:
       - ./src/main/resources/db-init:/docker-entrypoint-initdb.d
+
+  redis:
+    image: redis:7.2-rc-alpine
+    restart: always
+    container_name: redis
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass a2FmZ2tha2Zna2Zrc2RmZWdidmtzYmFrYXNkZmQ=
+    volumes:
+      - cache:/data
