--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <liquibase.version>4.19.0</liquibase.version>
         <springdoc.version>2.0.2</springdoc.version>
         <preliquibase.version>1.3.0</preliquibase.version>
+        <minio.version>8.5.3</minio.version>
     </properties>
     <dependencies>
         <dependency>
@@ -122,6 +123,12 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
         </dependency>
 
         <dependency>
