#13 Added README.md, checkstyle and Github Actions (UML diagrams, documentation, Github Actions, Docker hub)

--- a/.github/workflow/maven-build.yml
+++ b/.github/workflow/maven-build.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           path: ~/.m2/repository
           key: maven-${{ hashFiles('**/pom.xml')}}
-          restore-keys:
+          restore-keys: |
             maven-
       - run: mvn clean install
