--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,4 +21,4 @@ jobs:
           dockerfile: Dockerfile
           registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
