--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <minio.version>8.5.3</minio.version>
         <xml-format.version>3.2.2</xml-format.version>
         <checkstyle.version>3.2.2</checkstyle.version>
+        <graphql-java-kickstart.version>15.2.0</graphql-java-kickstart.version>
+        <graphql-java-extended-scalars>21.0</graphql-java-extended-scalars>
     </properties>
     <dependencies>
         <dependency>
@@ -43,6 +45,23 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-graphql</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>graphql-java-servlet</artifactId>
+            <version>${graphql-java-kickstart.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-extended-scalars</artifactId>
+            <version>${graphql-java-extended-scalars}</version>
         </dependency>
 
         <dependency>
