--- a/.env
+++ b/.env
@@ -14,3 +14,8 @@ MINIO_URL=http://localhost:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 
+SPRING_MAIL_HOST=smtp.gmail.com
+SPRING_MAIL_PORT=587
+SPRING_MAIL_USERNAME=tasklistforstanislav@gmail.com
+SPRING_MAIL_PASSWORD=wgis imcq brxu wyed
+
